# uv-publish

./: .gitignore  Makefile  README.md  justfile  pyproject.toml  uv_publish.py
